MarcosSanchezSpring/src/main/java/com/example/marcossanchezspring/domain/errors/ErrorAppGrupos.java
package com.example.marcossanchezspring.domain.errors;

public enum ErrorAppGrupos implements ErrorApp {
    GRUPO_YA_EXISTE,
    NO_GROUPS_FOUND,
    GRUPO_CONTRASENA_INCORRECTA,
    USUARIO_YA_EN_GRUPO,
    NOMBRE_NO_VALIDO,
    NO_MESSAGES_FOUND
}
